--- a/src/app/e-commerce/Admin/add-category/add-category.component.html
+++ b/src/app/e-commerce/Admin/add-category/add-category.component.html
@@ -25,4 +25,25 @@
         </div>
     </div>
 </section>
-<!--/form-->
+
+<div class="container Mytable">
+    <h2>Product Data</h2>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Edit/Delete</th>
+                <th>category Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <button type="button" class="btn btn-success">Edit</button>&nbsp;
+                    <button type="button" class="btn btn-danger">Delete</button>
+                </td>
+                <td>Electronics</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<br>
