--- a/src/app/e-commerce/Admin/add-product/add-product.component.html
+++ b/src/app/e-commerce/Admin/add-product/add-product.component.html
@@ -6,7 +6,7 @@
                 <div class="col-sm-4">
                     <div class="signup-form">
                         <!--sign up form-->
-                        <h2>Add Category!</h2>
+                        <h2>Add Product!</h2>
                         <form (ngSubmit)="onProductAdd(addCategory)" #addCategory="ngForm">
 
                             <input type="text" placeholder="Product Name" name="productName" ngModel required
@@ -72,17 +72,17 @@
                             <div class="form-group" ngFormGroup="">
                                 <label for="sel1">Category:</label>
                                 <select class="form-control" id="sel1" name="category" ngModel="id">
-                                  <option value="" disabled>Select</option>
-                                  <option [value]="1">Electronics</option>
-                                  <option [value]="2">Furniture</option>
-                                  <option [value]="3">Food</option>
+                                    <option value="" disabled>Select</option>
+                                    <option [value]="1">Electronics</option>
+                                    <option [value]="2">Furniture</option>
+                                    <option [value]="3">Food</option>
                                 </select>
-                              </div>
+                            </div>
 
                             <div class="form-group">
                                 <label style="color:gray">Description</label>
-                                <textarea class="form-control rounded-0" id="exampleFormControlTextarea2"
-                                    rows="3" name="description" ngModel="description"></textarea>
+                                <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3"
+                                    name="description" ngModel="description"></textarea>
                             </div>
 
                             <button type="submit" class="btn btn-default" [disabled]="!addCategory.valid">
@@ -97,5 +97,50 @@
     </section>
     <!--/form-->
 
+</div>
+<br>
+
+
+
+<div class="container Mytable">
+    <h2>Product Data</h2>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Edit/Delete</th>
+                <th>Product Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>URL 1</th>
+                <th>URL 2</th>
+                <th>URL 3</th>
+                <th>GST</th>
+                <th>Category</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <div style="width: 150px;">
+                        <button type="button" class="btn btn-success">Edit</button>&nbsp;
+                        <button type="button" class="btn btn-danger">Delete</button>
+                    </div>
+                </td>
+                <td>Watch</td>
+                <td>20</td>
+                <td>500Rs</td>
+                <td>https://www.pngitem.com/pimgs/m/115-1156789_watches-png-image-watch-images-png-transparent-png.png
+                </td>
+                <td>https://www.pngitem.com/pimgs/m/115-1156789_watches-png-image-watch-images-png-transparent-png.png
+                </td>
+                <td>https://www.pngitem.com/pimgs/m/115-1156789_watches-png-image-watch-images-png-transparent-png.png
+                </td>
+                <td>30</td>
+                <td>3</td>
+                <td>Best Watch</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 <br><br>
