--- a/src/app/e-commerce/Admin/add-product/add-product.component.css
+++ b/src/app/e-commerce/Admin/add-product/add-product.component.css
@@ -5,8 +5,6 @@
 .Mytable {
     border-radius: 10px;
     padding: 20px;
-    margin: 0 auto;
-    width: 900px;
-    overflow: scroll;
-    box-shadow: 0 2px 12px rgba(0,0,0,0.3);
+    margin: 2% 8%;
+    border: 2px solid lightgrey;
 }
