--- a/src/app/e-commerce/features/cart/pages/action/action.component.html
+++ b/src/app/e-commerce/features/cart/pages/action/action.component.html
@@ -9,7 +9,7 @@
     <app-cart></app-cart>
   </div>
 </section>
-<section id="do_action" *ngIf="totalAmount != 0">
+<!-- <section id="do_action" *ngIf="totalAmount != 0">
   <div class="container">
     <div class="heading">
       <h3>What would you like to do next?</h3>
@@ -35,5 +35,5 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!--/#do_action-->
