--- a/src/app/e-commerce/features/whish-list/whish-list.component.html
+++ b/src/app/e-commerce/features/whish-list/whish-list.component.html
@@ -5,9 +5,9 @@
       <div class="product-image-wrapper">
         <div class="single-products">
           <div class="productinfo text-center">
-            <img src="{{ data.banner }}" alt="" />
+            <img src="{{ data.image2 }}" alt="" />
             <h2>$ {{ data.price }}</h2>
-            <p>{{ data.product_name }}</p>
+            <p>{{ data.name }}</p>
             <a class="btn btn-default add-to-cart"
               ><i class="fa fa-shopping-cart"></i>Add to cart</a
             >
